--- a/src/app/pages/pills/components/pills-drugs/pills-drugs.component.scss
+++ b/src/app/pages/pills/components/pills-drugs/pills-drugs.component.scss
@@ -1,21 +1,93 @@
+#background-content {
+  background: var(--main-background-color) !important; ;
+}
 .pills-drugs {
+  width: 100%;
+  height: 100%;
+  margin-bottom: 50px;
+  background: var(--main-background-color);
+
+  mat-form-field {
+    width: 100%;
+  }
+
   &-header {
-    font-size: 1.5em;
-    font-weight: bold;
-    text-align: center;
-    padding: 10px;
+    color: var(--main-text-color);
+    padding: 20px;
+    font-size: 18px;
+    font-weight: 600;
+    display: flex;
+    justify-content: space-between;
+    text-align: left;
+    font-family: 'Nunito', sans-serif;
+
+    &_search {
+      width: 100%;
+    }
+    input {
+      text-align: left;
+      border-bottom: 1px solid;
+      width: 100%;
+      padding: 10px;
+      background: var(--main-background-color);
+      border-top: 0;
+      border-left: 0;
+      border-right: 0;
+    }
   }
 
   &-content {
+    background: var(--main-background-color);
     &_search {
       padding: 10px 20px;
 
+      fa-icon {
+        font-size: 1em;
+        position: relative;
+        color: var(--second-text-color);
+        top: -5px;
+        right: 0;
+      }
     }
 
     &_item {
-      margin: 10px;
-      padding: 10px;
+      color: var(--second-text-color);
+      background: #FFFFFF;
+      border-radius: 8px;
+      font-size: 1em;
+      margin: 20px;
+      padding: 15px;
+      font-family: 'Nunito', sans-serif;
     }
+    &_item-new {
+      background: #fff;
+      margin: 20px;
+      padding: 15px;
+      border-radius: 8px;
+      font-family: 'Nunito', sans-serif;
+      color: var(--main-text-color);
+      box-shadow: 0px 1px 4px rgba(183, 28, 28, 0.25);
+      font-size: 18px;
+      display: flex;
+      justify-content: space-between;
+      line-height: 32px;
+
+      &-icon {
+        border-radius: 50%;
+        background: rgba(183, 28, 28, 0.5);
+        width: 32px;
+        height: 32px;
+        text-align: center;
+        line-height: 32px
+      }
+      fa-icon {
+        color: #fff;
+      }
+    }
+
+    &_item:first-letter {
+      text-transform: uppercase;
+    };
   }
 
 
